# DashVolcano

./: .gitignore  GVP_Eruption_Results.xlsx  GVP_Volcano_List.xlsx  README.md  app.py  ecosystem.config.js  ecosystem.development.config.js  ecosystem.production.config.js  monitor.env  monitor.env.example  monitor.js  monitor.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-monitoring.sh  start-api.sh
DashVolcano/: Cf  Cv  GVP_functions.py  Georoc_functions.py  PetDB_functions.py  app.py  config_variables.py  index.py  lst1all2023  run.py  thisdf.csv
DashVolcano.1.0/: Cr  GVP_functions.py  Georoc_functions.py  app.py  config_variables.py
PetDB/: PetDB.csv  PetDBIntraplate_,_Continental.txt  PetDBIntraplate_,_Oceanic.txt  PetDBRift_at_plate_boundaries_,_Continental.txt  PetDBRift_at_plate_boundaries_,_Oceanic.txt  PetDBSubduction_zone_,_Continental.txt  PetDBSubduction_zone_,_Oceanic.txt  PetDB_Volcano_list.csv  earthchem_download_14378_byFeature_country.xlsx  (+3 more)
backend/: .env.example  .gitignore  README.md  __init__.py  check_fields.py  config.py  create_indexes.py  create_missing_indexes.py  database.py  dependencies.py  main.py  pyproject.toml
backend/middleware/: __init__.py  caching.py
backend/models/: __init__.py  entities.py  responses.py
backend/routers/: analytics.py  eruptions.py  metadata.py  samples.py  spatial.py  volcanoes.py
backend/services/: sample_filters.py
backend/tests/: __init__.py  test_analytics_endpoints.py  test_api_endpoints.py  test_bbox_endpoint.py  test_models.py  test_tectonic_endpoints.py
(+1051 files in other folders)
